--- a/conf/fotis.cnf
+++ b/conf/fotis.cnf
@@ -2,7 +2,7 @@
 # Switch for main scoring room
 #
 port fa1-12 scoring
-port fa13-16 dmz
-port fa17-18 secur
-port fa19-24 wbf
+port fa13-15 mgmt
+port fa16-18 secur
+port fa19-24 bbo
 port gi1-4 trunk
