--- a/eblwbf/conf/mario10.cnf
+++ b/eblwbf/conf/mario10.cnf
@@ -1,6 +1,6 @@
 port gi1 nt_wan
 port gi2 trunk
-port fa1 mario
+port fa1 mariox
 port fa2 nt_wan
-port fa3-7 othervideo
+port fa3-7 othervideox
 port fa8 scoring
